# USD

./: 123.diff  BUILDING.md  README.md
build_scripts/: build_usd.py
cmake/defaults/: Options.cmake  Packages.cmake  gccclangshareddefaults.cmake
cmake/macros/: Private.cmake  Public.cmake  generateDocs.py  testWrapper.py
cmake/modules/: FindMdlSdk.cmake
pxr/base/arch/: fileSystem.h  math.h  stackTrace.cpp  timing.h
pxr/usd/ar/: asset.h  (+2 more)
pxr/usd/plugin/: CMakeLists.txt
pxr/usd/plugin/usdAbc/testenv/: testUsdAbcIsConstant.py
pxr/usd/plugin/usdMdl/: CMakeLists.txt  __init__.py  api.h  backdoor.cpp  backdoor.h  discovery.cpp  distiller.cpp  distiller.h  fileFormat.cpp  fileFormat.h  generatedSchema.usda  mdlAPI.cpp  mdlAPI.h  mdlToUsd.cpp  mdlToUsd.h  module.cpp  moduleDeps.cpp  neuray.cpp  neuray.h  parser.cpp  pch.h  plugInfo.json  reader.cpp  reader.h  schema.usda  tokens.cpp  tokens.h  usdMdlUtil.cpp  usdMdlUtil.h  usdToMdl.cpp  usdToMdl.h  usdUtil.cpp  usdUtil.h  utils.cpp  utils.h  wrapBackdoor.cpp  wrapMdlAPI.cpp  wrapTokens.cpp
pxr/usd/plugin/usdMdl/test/: sphere.usda  testEnum.usda  testStruct.usda  testUsdMdlDiscovery.py  testUsdMdlDistiller.py
pxr/usd/plugin/usdMdl/test/testUsdMdlDistiller/mdl/nvidia/: core_definitions.mdl
pxr/usd/plugin/usdMdl/test/testUsdMdlDistiller/mdl/nvidia/vMaterials/Design/Wood/: burlwood.mdl
pxr/usd/plugin/usdMdl/test/testUsdMdlTypes/mdl/nvidia/: test.ies  test_types.mdl
pxr/usd/plugin/usdMdl/test/testUsdToMdl/: CreateMdl.py  material.usda  test_module.mdl
pxr/usd/plugin/usdMtlx/testenv/: testUsdMtlxFileFormat.py
(+430 files in other folders)
